Fixed wrong game indexes in setup dialog

--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@
 application.name=Championship Manager
 application.version=1.0.0
 application.version_txt=1.0 RC2
-application.authors=Roman Raedle
+application.authors=Roman Rädle
 
 # Splash screen off.
 nosplash
